--- a/templates/core/login.html
+++ b/templates/core/login.html
@@ -39,8 +39,13 @@
                     </form>
                 </div>
                 <div class="card-footer text-center text-muted">
-                    <small>© 2026 商场店铺智能运营管理系统</small>
-                </div>
+    <small>
+        没有账号，赶紧去
+        <a href="{% url 'core:register' %}">注册</a>
+        吧
+    </small>
+                 <div class="small">© 2026 商场店铺智能运营管理系统</div>
+</div>
             </div>
         </div>
     </div>
