--- a/apps/communication/templates/communication/activity_form.html
+++ b/apps/communication/templates/communication/activity_form.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 
+
+{% block extra_css %}
+{% include 'partials/modern_theme.html' %}
+{% endblock %}
 {% block content %}
-<div class="container mt-4">
-    <h1 class="mb-4">{% if object %}编辑活动申请{% else %}提交活动申请{% endif %}</h1>
-    
-    <div class="card">
+<div class="container page-shell">
+{% if object %}
+    {% include 'partials/page_header.html' with title="编辑活动申请" subtitle="更新活动信息与时间" %}
+{% else %}
+    {% include 'partials/page_header.html' with title="提交活动申请" subtitle="填写活动信息与时间" %}
+{% endif %}
+<div class="card shadow-sm section-card">
         <div class="card-body">
             <form method="post">
                 {% csrf_token %}
