--- a/templates/store/contract_list.html
+++ b/templates/store/contract_list.html
@@ -57,6 +57,7 @@
                     </td>
                     <td>
                         {% if user.is_authenticated %}
+                        <a href="{% url 'store:contract_detail' contract.pk %}" class="btn btn-sm btn-outline-primary">Details</a>
                         {% if contract.status == 'DRAFT' %}
                         <a href="{% url 'store:contract_activate' contract.pk %}" class="btn btn-sm btn-success">激活</a>
                         {% elif contract.status == 'ACTIVE' %}
